syntax = "proto3";

package org.yaorm.sqlite;

enum SQLiteType {
    SQLITE_NONE = 0;
    TEXT = 1;
    INTEGER = 2;
    REAL = 3;
    BLOB = 4;
}

enum SQLiteTypeMapping {
    option allow_alias = true;
    SQLITE_MAPPING_NONE = 0;
    DOUBLE = 3;
    FLOAT = 3;
    INT32 = 2;
    INT64 = 2;
    UINT32 = 2;
    UINT64 = 2;
    SINT32 = 2;
    SINT64 = 2;
    FIXED32 = 2;
    FIXED64 = 2;
    SFIXED32 = 2;
    SFIXED64 = 2;
    BOOL = 2;
    STRING = 1;
    BYTES = 4;
}